--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: Echo This is hello program 
+        run: echo This is hello program!
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
