--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Build
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-    - name: Build and tag docker image
+    - name: Build and tag docker-image
       run: |
          docker build . -t ${{ env.CONTAINER_IMAGE }}:${GITHUB_SHA::7}
     - name: Publish docker image to dockerhub
